--- a/pages/work.html
+++ b/pages/work.html
@@ -27,7 +27,7 @@
         <h1>Research</h1>
           <ul>
             <li>
-              <b>Ninell Oldenburg</b>. 2026. <i>Dismantling Masculine Epistemologies in Existential Risk</i>. (Working Paper).
+              <b>Ninell Oldenburg</b>. 2026. <i>Masculine Epistemologies and Existential Risk</i>. (Working Paper).
             </li>
             <li>
               <b>Ninell Oldenburg</b>, Jacob Aarup Dalsgaard, Anders Søgaard, and Roberta Sinatra. 2026. 
