--- a/pages/work.html
+++ b/pages/work.html
@@ -39,7 +39,7 @@
             </li>
             <li>
               <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2026. <i>Realist and Pluralist Conceptions of Intelligence 
-                and Their Implications on AI Research. </i>. In Proceedings of the AAAI Conference on Artificial Intelligence.
+                and Their Implications on AI Research</i>. In Proceedings of the AAAI Conference on Artificial Intelligence.
             </li>
              <li>
               <b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, 
