--- a/pages/work.html
+++ b/pages/work.html
@@ -94,7 +94,7 @@
             </li>
           </ul>
 
-        <h1>Journalism (selected)</h1>
+        <h1>Media</h1>
           <ul>
             <li>
               Someone Behind the Screen? Researchers Are Divided on AI Consciousness.
