--- a/pages/work.html
+++ b/pages/work.html
@@ -82,7 +82,7 @@
             </li>
           </ul>
 
-          <h1>Recorded Talks</h1>
+          <h1>Talks</h1>
           <ul>
             <li>
               Philosophical Commitments to LLM Evaluations: The Problem of Moving Goalposts and Observational Relativity.
