new button style?

--- a/pages/work.html
+++ b/pages/work.html
@@ -83,7 +83,7 @@
             </li>
           </ul>
 
-          <h1>Recorded Talks</h1>
+          <h1>Talks</h1>
           <ul>
             <li>
               Philosophical Commitments to LLM Evaluations: The Problem of Moving Goalposts and Observational Relativity.
@@ -95,7 +95,7 @@
             </li>
           </ul>
 
-        <h1>Journalism (selected)</h1>
+        <h1>Media</h1>
           <ul>
             <li>
               Someone Behind the Screen? Researchers Are Divided on AI Consciousness.
