--- a/pages/work.html
+++ b/pages/work.html
@@ -25,45 +25,49 @@
           <h2>2026</h2>
           <ul>
             <li>
-              <b>Ninell Oldenburg</b>. <i>Masculine Epistemologies and Existential Risk</i>. (Working Paper).
+              <b>Ninell Oldenburg</b>. <i>Gendered Epistemologies and Existential Risk</i>. (Working Paper).
             </li>
             <li>
-              <b>Ninell Oldenburg</b>, Jacob Aarup Dalsgaard, Anders Søgaard, and Roberta Sinatra. 
+              <b>Ninell Oldenburg</b>, Jacob Aarup Dalsgaard, Anders Søgaard, and Roberta Sinatra. 2026. 
               <i>AI Risk Research Dataset</i>. (Under review).
             </li>
             <li>
-              Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard. <i>Measure Generality, 
-              Not Intelligence</i>. (Under review).
+              Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard.2026. <i>On the Measure of a Model: 
+                From Intelligence to Generality</i>. (Under review).
+              <a href="https://arxiv.org/abs/2511.11773" target="_blank" class="btn">Arxiv</a> 
+              <a href="https://arxiv.org/pdf/2511.11773" target="_blank" class="btn">PDF</a> 
             </li>
             <li>
-              <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. <i>Realist and Pluralist Conceptions of Intelligence 
-                and Their Implications on AI Research</i>. In Proceedings of the AAAI Conference on Artificial Intelligence.
+              <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2026. <i>Realist and Pluralist Conceptions of Intelligence 
+                and Their Implications on AI Research</i>. In Proceedings of the AAAI Conference on Artificial Intelligence. (forthcoming).
+              <a href="https://arxiv.org/abs/2511.15282" target="_blank" class="btn">Arxiv</a> 
+              <a href="https://arxiv.org/pdf/2511.15282" target="_blank" class="btn">PDF</a> 
             </li>
           </ul>
 
           <h2>2025</h2>
           <ul>
             <li>
-              <b>Ninell Oldenburg</b> and Gleb Papyshev. <i>The Stories We Govern By: AI, Risk, 
+              <b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, 
                 and the Power of Imaginaries</i>. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.
                 <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686" target="_blank" class="btn">Proceedings</a> 
                 <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686/38824" target="_blank" class="btn">PDF</a>
             </li>
             <li>
-              Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. <i>Beyond Technocratic XAI: 
+              Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Beyond Technocratic XAI: 
                 The Who, What & How in Explanation Design</i>. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.
                 <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586" target="_blank" class="btn">Proceedings</a> 
                 <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586/38724" target="_blank" class="btn">PDF</a>
             </li>
             <li>
               Iwan Williams, <b>Ninell Oldenburg</b>, Ruchira Dhar, Joshua Hatherley, Constanza Fierro,
-              Nina Rajcic, Sandrine R. Schiller, Filippos Stamatiou, and Anders Søgaard. 
+              Nina Rajcic, Sandrine R. Schiller, Filippos Stamatiou, and Anders Søgaard. 2025. 
               <i>Mechanistic Interpretability Needs Philosophy</i>. (Under review).
                 <a href="https://arxiv.org/abs/2506.18852" target="_blank" class="btn">Arxiv</a> 
                 <a href="https://arxiv.org/pdf/2506.18852" target="_blank" class="btn">PDF</a> 
             </li>
             <li>
-              <b>Ninell Oldenburg</b> and Anders Søgaard. <i>Navigating the Informativeness-
+              <b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-
                 Compression Trade-Off in XAI</i>. AI & Ethics.
                 <a href="https://link.springer.com/article/10.1007/s43681-025-00733-5" target="_blank" class="btn">Springer</a> 
                 <a href="https://link.springer.com/epdf/10.1007/s43681-025-00733-5?sharing_token=o8H9C5-qkdQmRTlMvTDstPe4RwlQNchNByi7wbcMAY5GWHrJ9kwvPzZ0LCOPxs7vSTajH49lvGE8M-q6rAWFASdL9oh90I1O4eZ8znCo8UtxYF_NMObqsKpgPb86oD1iGyByY9Ewyb1EdFZSqQr3QLAyzrz3FJcEIEP2ts6pAEk%3D" target="_blank" class="btn">PDF</a>
@@ -73,7 +77,7 @@
           <h2>2024</h2>
           <ul>
             <li>
-              <b>Ninell Oldenburg</b> and Tan Zhi-Xuan. <i>Learning and Sustaining Shared
+              <b>Ninell Oldenburg</b> and Tan Zhi-Xuan. 2024. <i>Learning and Sustaining Shared
               Normative Systems via Bayesian Rule Induction in Markov Games</i>. In Proc.
               of the 23rd International Conference on Autonomous Agents and Multiagent
               Systems. University of Auckland, New Zealand.
