--- a/pages/work.html
+++ b/pages/work.html
@@ -32,12 +32,14 @@
               <i>AI Risk Research Dataset</i>. (Under review).
             </li>
             <li>
+              <span class="pub-tag">preprint</span>
               Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard.2026. <i>On the Measure of a Model: 
                 From Intelligence to Generality</i>. (Under review).
               <a href="https://arxiv.org/abs/2511.11773" target="_blank" class="btn">Arxiv</a> 
               <a href="https://arxiv.org/pdf/2511.11773" target="_blank" class="btn">PDF</a> 
             </li>
             <li>
+              <span class="pub-tag">AAAI</span>
               <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2026. <i>Realist and Pluralist Conceptions of Intelligence 
                 and Their Implications on AI Research</i>. In Proceedings of the AAAI Conference on Artificial Intelligence. (forthcoming).
               <a href="https://arxiv.org/abs/2511.15282" target="_blank" class="btn">Arxiv</a> 
@@ -48,18 +50,21 @@
           <h2>2025</h2>
           <ul>
             <li>
+              <span class="pub-tag">AIES</span>
               <b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, 
                 and the Power of Imaginaries</i>. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.
                 <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686" target="_blank" class="btn">Proceedings</a> 
                 <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686/38824" target="_blank" class="btn">PDF</a>
             </li>
             <li>
+              <span class="pub-tag">AIES</span>
               Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Beyond Technocratic XAI: 
                 The Who, What & How in Explanation Design</i>. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.
                 <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586" target="_blank" class="btn">Proceedings</a> 
                 <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586/38724" target="_blank" class="btn">PDF</a>
             </li>
             <li>
+              <span class="pub-tag">preprint</span>
               Iwan Williams, <b>Ninell Oldenburg</b>, Ruchira Dhar, Joshua Hatherley, Constanza Fierro,
               Nina Rajcic, Sandrine R. Schiller, Filippos Stamatiou, and Anders Søgaard. 2025. 
               <i>Mechanistic Interpretability Needs Philosophy</i>. (Under review).
@@ -67,6 +72,7 @@
                 <a href="https://arxiv.org/pdf/2506.18852" target="_blank" class="btn">PDF</a> 
             </li>
             <li>
+              <span class="pub-tag">AI & Ethics</span>
               <b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-
                 Compression Trade-Off in XAI</i>. AI & Ethics.
                 <a href="https://link.springer.com/article/10.1007/s43681-025-00733-5" target="_blank" class="btn">Springer</a> 
@@ -77,6 +83,7 @@
           <h2>2024</h2>
           <ul>
             <li>
+              <span class="pub-tag">AAMAS</span>
               <b>Ninell Oldenburg</b> and Tan Zhi-Xuan. 2024. <i>Learning and Sustaining Shared
               Normative Systems via Bayesian Rule Induction in Markov Games</i>. In Proc.
               of the 23rd International Conference on Autonomous Agents and Multiagent
