--- a/pages/work.html
+++ b/pages/work.html
@@ -1,133 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/color-work.css">
-    <title>Work - Ninell Oldenburg</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/color-work.css">
+  <title>Work - Ninell Oldenburg</title>
 </head>
 <body>
-    <nav>
-        <ul>
-          <li><a href="../index.html">home</a></li>
-          <li class="dropdown">
-            <a href="work.html">work</a>
-          </li>
-          <li><a href="../docs/CV.pdf" target="_blank">cv</a></li>
-        </ul>
-    </nav>
+  <nav>
+    <ul>
+      <li><a href="../index.html">home</a></li>
+      <li class="dropdown"><a href="work.html">work</a></li>
+      <li><a href="../docs/CV.pdf" target="_blank">cv</a></li>
+    </ul>
+  </nav>
 
-    <div class="container">
+  <div class="container">
 
-        <h1>Research</h1>
-          
-          <h2>2026</h2>
-          <ul>
-            <li>
-              <b>Ninell Oldenburg</b>. <i>Gendered Epistemologies and Existential Risk</i>. (Working Paper).
-            </li>
-            <li>
-              <b>Ninell Oldenburg</b>, Jacob Aarup Dalsgaard, Anders Søgaard, and Roberta Sinatra. 2026. 
-              <i>AI Risk Research Dataset</i>. (Under review).
-            </li>
-            <li>
-              <span class="pub-tag">preprint</span>
-              Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard.2026. <i>On the Measure of a Model: 
-                From Intelligence to Generality</i>. (Under review).
-              <a href="https://arxiv.org/abs/2511.11773" target="_blank" class="btn">Arxiv</a> 
-              <a href="https://arxiv.org/pdf/2511.11773" target="_blank" class="btn">PDF</a> 
-            </li>
-            <li>
-              <span class="pub-tag">AAAI</span>
-              <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2026. <i>Realist and Pluralist Conceptions of Intelligence 
-                and Their Implications on AI Research</i>. In Proceedings of the AAAI Conference on Artificial Intelligence. (forthcoming).
-              <a href="https://arxiv.org/abs/2511.15282" target="_blank" class="btn">Arxiv</a> 
-              <a href="https://arxiv.org/pdf/2511.15282" target="_blank" class="btn">PDF</a> 
-            </li>
-          </ul>
+    <!-- Reference goal image (uploaded) -->
+    <img src="/mnt/data/a6401d84-8f5b-4b67-bc34-a7ee0bf25b79.png" alt="layout goal" style="max-width:720px; width:100%; height:auto; display:block; margin:0 0 20px auto;">
 
-          <h2>2025</h2>
-          <ul>
-            <li>
-              <span class="pub-tag">AIES</span>
-              <b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, 
-                and the Power of Imaginaries</i>. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.
-                <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686" target="_blank" class="btn">Proceedings</a> 
-                <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686/38824" target="_blank" class="btn">PDF</a>
-            </li>
-            <li>
-              <span class="pub-tag">AIES</span>
-              Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Beyond Technocratic XAI: 
-                The Who, What & How in Explanation Design</i>. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.
-                <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586" target="_blank" class="btn">Proceedings</a> 
-                <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586/38724" target="_blank" class="btn">PDF</a>
-            </li>
-            <li>
-              <span class="pub-tag">preprint</span>
-              Iwan Williams, <b>Ninell Oldenburg</b>, Ruchira Dhar, Joshua Hatherley, Constanza Fierro,
-              Nina Rajcic, Sandrine R. Schiller, Filippos Stamatiou, and Anders Søgaard. 2025. 
-              <i>Mechanistic Interpretability Needs Philosophy</i>. (Under review).
-                <a href="https://arxiv.org/abs/2506.18852" target="_blank" class="btn">Arxiv</a> 
-                <a href="https://arxiv.org/pdf/2506.18852" target="_blank" class="btn">PDF</a> 
-            </li>
-            <li>
-              <span class="pub-tag">AI & Ethics</span>
-              <b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-
-                Compression Trade-Off in XAI</i>. AI & Ethics.
-                <a href="https://link.springer.com/article/10.1007/s43681-025-00733-5" target="_blank" class="btn">Springer</a> 
-                <a href="https://link.springer.com/epdf/10.1007/s43681-025-00733-5?sharing_token=o8H9C5-qkdQmRTlMvTDstPe4RwlQNchNByi7wbcMAY5GWHrJ9kwvPzZ0LCOPxs7vSTajH49lvGE8M-q6rAWFASdL9oh90I1O4eZ8znCo8UtxYF_NMObqsKpgPb86oD1iGyByY9Ewyb1EdFZSqQr3QLAyzrz3FJcEIEP2ts6pAEk%3D" target="_blank" class="btn">PDF</a>
-            </li>
-          </ul>
+    <h1>Research</h1>
 
-          <h2>2024</h2>
-          <ul>
-            <li>
-              <span class="pub-tag">AAMAS</span>
-              <b>Ninell Oldenburg</b> and Tan Zhi-Xuan. 2024. <i>Learning and Sustaining Shared
-              Normative Systems via Bayesian Rule Induction in Markov Games</i>. In Proc.
-              of the 23rd International Conference on Autonomous Agents and Multiagent
-              Systems. University of Auckland, New Zealand.
-                <a href="https://dl.acm.org/doi/abs/10.5555/3635637.3663011" target="_blank" class="btn">Proceedings</a> 
-                <a href="https://www.ifaamas.org/Proceedings/aamas2024/pdfs/p1510.pdf" target="_blank" class="btn">PDF</a>
-            </li>
-          </ul>
+    <h2>2026</h2>
+    <ul>
+      <li>
+        <span class="pub-tag"> </span>
+        <span class="pub-title">Ninell Oldenburg. <i>Gendered Epistemologies and Existential Risk</i>. (Working Paper).</span>
+        <span class="pub-meta"><b>Ninell Oldenburg</b>.</span>
+      </li>
 
-          <h1>Talks</h1>
-          <ul>
-            <li>
-              Philosophical Commitments to LLM Evaluations: The Problem of Moving Goalposts and Observational Relativity.
-              <a href="https://www.youtube.com/watch?v=w6XTWLMip88" target="_blank" class="btn">AI & Humanity Lab Hong Kong Seminar Series 2025</a>
-            </li>
-            <li>
-              Learning and Sustaining Social Norms as Normative Equilibria.
-              <a href="https://www.youtube.com/watch?v=u4sAGSbXZqQ" target="_blank" class="btn">PIBBSS Symposium 2023</a> 
-            </li>
-          </ul>
+      <li>
+        <span class="pub-tag"> </span>
+        <span class="pub-title">Ninell Oldenburg, Jacob Aarup Dalsgaard, Anders Søgaard, and Roberta Sinatra. 2026. <i>AI Risk Research Dataset</i>.</span>
+        <span class="pub-meta">(Under review).</span>
+      </li>
 
-        <h1>Media</h1>
-          <ul>
-            <li>
-              Someone Behind the Screen? Researchers Are Divided on AI Consciousness.
-              <a href="https://www.sciencenordic.com/artificial-intelligence-brain-computers/is-there-someone-behind-the-screen-researchers-are-divided-on-ai-consciousness/2482914" target="_blank" class="btn">ScienceNordic</a>
-            </li>
-            <li>
-              Meine Freunde, die Querdenker (<i>Eng: My Friends, Anti-Vaxxers</i>). 
-              <a href="https://diefreiheitsliebe.de/gesellschaft/meine-freunde-die-querdenker/" target="_blank" class="btn">Die Freiheitsliebe</a>
-            </li>
-          </ul>
+      <li>
+        <span class="pub-tag">preprint</span>
+        <span class="pub-title">Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard.2026. <i>On the Measure of a Model: From Intelligence to Generality</i>.</span>
+        <span class="pub-meta">(Under review).</span>
+        <a href="https://arxiv.org/abs/2511.11773" target="_blank" class="btn">Arxiv</a>
+        <a href="https://arxiv.org/pdf/2511.11773" target="_blank" class="btn">PDF</a>
+      </li>
 
-        <h1>Art</h1>
-          <ul>
-            <li>
-              2024. <i>Debates</i>. 
-              <a href="alignment/debates.html" target="_blank" class="btn">Link</a>
-            </li>
-          </ul>
+      <li>
+        <span class="pub-tag">AAAI</span>
+        <span class="pub-title"><b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2026. <i>Realist and Pluralist Conceptions of Intelligence and Their Implications on AI Research</i>.</span>
+        <span class="pub-meta">In Proceedings of the AAAI Conference on Artificial Intelligence. (forthcoming).</span>
+        <a href="https://arxiv.org/abs/2511.15282" target="_blank" class="btn">Arxiv</a>
+        <a href="https://arxiv.org/pdf/2511.15282" target="_blank" class="btn">PDF</a>
+      </li>
+    </ul>
 
-    </div>
-    
-    <footer>
-    </footer>
+    <h2>2025</h2>
+    <ul>
+      <li>
+        <span class="pub-tag">AIES</span>
+        <span class="pub-title"><b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, and the Power of Imaginaries</i>.</span>
+        <span class="pub-meta">The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.</span>
+        <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686" target="_blank" class="btn">Proceedings</a>
+        <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686/38824" target="_blank" class="btn">PDF</a>
+      </li>
+
+      <li>
+        <span class="pub-tag">AIES</span>
+        <span class="pub-title">Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Beyond Technocratic XAI: The Who, What & How in Explanation Design</i>.</span>
+        <span class="pub-meta">The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.</span>
+        <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586" target="_blank" class="btn">Proceedings</a>
+        <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586/38724" target="_blank" class="btn">PDF</a>
+      </li>
+
+      <li>
+        <span class="pub-tag">preprint</span>
+        <span class="pub-title">Iwan Williams, <b>Ninell Oldenburg</b>, Ruchira Dhar, Joshua Hatherley, Constanza Fierro, Nina Rajcic, Sandrine R. Schiller, Filippos Stamatiou, and Anders Søgaard. 2025. <i>Mechanistic Interpretability Needs Philosophy</i>.</span>
+        <span class="pub-meta">(Under review).</span>
+        <a href="https://arxiv.org/abs/2506.18852" target="_blank" class="btn">Arxiv</a>
+        <a href="https://arxiv.org/pdf/2506.18852" target="_blank" class="btn">PDF</a>
+      </li>
+
+      <li>
+        <span class="pub-tag">AI &amp; Ethics</span>
+        <span class="pub-title"><b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-Compression Trade-Off in XAI</i>.</span>
+        <span class="pub-meta">AI &amp; Ethics.</span>
+        <a href="https://link.springer.com/article/10.1007/s43681-025-00733-5" target="_blank" class="btn">Springer</a>
+        <a href="https://link.springer.com/epdf/10.1007/s43681-025-00733-5?sharing_token=o8H9C5-qkdQmRTlMvTDstPe4RwlQNchNByi7wbcMAY5GWHrJ9kwvPzZ0LCOPxs7vSTajH49lvGE8M-q6rAWFASdL9oh90I1O4eZ8znCo8UtxYF_NMObqsKpgPb86oD1iGyByY9Ewyb1EdFZSqQr3QLAyzrz3FJcEIEP2ts6pAEk%3D" target="_blank" class="btn">PDF</a>
+      </li>
+    </ul>
+
+    <h2>2024</h2>
+    <ul>
+      <li>
+        <span class="pub-tag">AAMAS</span>
+        <span class="pub-title"><b>Ninell Oldenburg</b> and Tan Zhi-Xuan. 2024. <i>Learning and Sustaining Shared Normative Systems via Bayesian Rule Induction in Markov Games</i>.</span>
+        <span class="pub-meta">In Proc. of the 23rd International Conference on Autonomous Agents and Multiagent Systems. University of Auckland, New Zealand.</span>
+        <a href="https://dl.acm.org/doi/abs/10.5555/3635637.3663011" target="_blank" class="btn">Proceedings</a>
+        <a href="https://www.ifaamas.org/Proceedings/aamas2024/pdfs/p1510.pdf" target="_blank" class="btn">PDF</a>
+      </li>
+    </ul>
+
+    <h1>Talks</h1>
+    <ul>
+      <li>
+        <span class="pub-tag">TALK</span>
+        <span class="pub-title">Philosophical Commitments to LLM Evaluations: The Problem of Moving Goalposts and Observational Relativity.</span>
+        <span class="pub-meta">AI &amp; Humanity Lab Hong Kong Seminar Series 2025</span>
+        <a href="https://www.youtube.com/watch?v=w6XTWLMip88" target="_blank" class="btn">Video</a>
+      </li>
+
+      <li>
+        <span class="pub-tag">TALK</span>
+        <span class="pub-title">Learning and Sustaining Social Norms as Normative Equilibria.</span>
+        <span class="pub-meta">PIBBSS Symposium 2023</span>
+        <a href="https://www.youtube.com/watch?v=u4sAGSbXZqQ" target="_blank" class="btn">Video</a>
+      </li>
+    </ul>
+
+    <h1>Media</h1>
+    <ul>
+      <li>
+        <span class="pub-tag">MEDIA</span>
+        <span class="pub-title">Someone Behind the Screen? Researchers Are Divided on AI Consciousness.</span>
+        <span class="pub-meta">ScienceNordic</span>
+        <a href="https://www.sciencenordic.com/artificial-intelligence-brain-computers/is-there-someone-behind-the-screen-researchers-are-divided-on-ai-consciousness/2482914" target="_blank" class="btn">Link</a>
+      </li>
+
+      <li>
+        <span class="pub-tag">MEDIA</span>
+        <span class="pub-title">Meine Freunde, die Querdenker (<i>Eng: My Friends, Anti-Vaxxers</i>).</span>
+        <span class="pub-meta">Die Freiheitsliebe</span>
+        <a href="https://diefreiheitsliebe.de/gesellschaft/meine-freunde-die-querdenker/" target="_blank" class="btn">Link</a>
+      </li>
+    </ul>
+
+    <h1>Art</h1>
+    <ul>
+      <li>
+        <span class="pub-tag">ART</span>
+        <span class="pub-title">2024. <i>Debates</i>.</span>
+        <span class="pub-meta">Artwork / project</span>
+        <a href="alignment/debates.html" target="_blank" class="btn">Link</a>
+      </li>
+    </ul>
+
+  </div>
+
+  <footer>
+  </footer>
 </body>
 </html>
