--- a/index.html
+++ b/index.html
@@ -14,16 +14,12 @@
           <li><a href="index.html">home</a></li>
           <li class="dropdown">
             <a href="pages/work.html">work</a>
-            <!-- <ul class="dropdown-content">
-              <li><a href="pages/alignment/debates.html" target="_blank">debates</a></li>
-            </ul>
-            -->
           </li>
           <li><a href="docs/CV.pdf" target="_blank">cv</a></li>
         </ul>
       </nav>
     <div class="container">
-        <h1>Ninell (she)</h1>
+        <h1>ninell (she)</h1>
         <p>
             I'm a second-year PhD student at the <a href="https://cpai.ku.dk/about-cpai/" 
             target="_blank">Center for Philosophy of AI at the University of Copenhagen</a> supervised by 
