--- a/pages/work.html
+++ b/pages/work.html
@@ -18,10 +18,7 @@
 
   <div class="container">
 
-    <!-- Reference goal image (uploaded) -->
-    <img src="/mnt/data/a6401d84-8f5b-4b67-bc34-a7ee0bf25b79.png" alt="layout goal" style="max-width:720px; width:100%; height:auto; display:block; margin:0 0 20px auto;">
-
-    <h1>Research</h1>
+    <h1>research</h1>
 
     <h2>2026</h2>
     <ul>
@@ -100,7 +97,7 @@
       </li>
     </ul>
 
-    <h1>Talks</h1>
+    <h1>talks</h1>
     <ul>
       <li>
         <span class="pub-tag">TALK</span>
@@ -117,7 +114,7 @@
       </li>
     </ul>
 
-    <h1>Media</h1>
+    <h1>media</h1>
     <ul>
       <li>
         <span class="pub-tag">MEDIA</span>
@@ -134,7 +131,7 @@
       </li>
     </ul>
 
-    <h1>Art</h1>
+    <h1>art</h1>
     <ul>
       <li>
         <span class="pub-tag">ART</span>
