--- a/pages/work.html
+++ b/pages/work.html
@@ -24,28 +24,28 @@
     <ul>
       <li>
         <span class="pub-tag"> </span>
-        <span class="pub-title">Ninell Oldenburg. <i>Gendered Epistemologies and Existential Risk</i>. (Working Paper).</span>
+        <span class="pub-title"><i>Gendered Epistemologies and Existential Risk</i>. (Working Paper).</span>
         <span class="pub-meta"><b>Ninell Oldenburg</b>.</span>
       </li>
 
       <li>
         <span class="pub-tag"> </span>
-        <span class="pub-title">Ninell Oldenburg, Jacob Aarup Dalsgaard, Anders Søgaard, and Roberta Sinatra. 2026. <i>AI Risk Research Dataset</i>.</span>
-        <span class="pub-meta">(Under review).</span>
+        <span class="pub-title"><i>AI Risk Research Dataset</i>.</span>
+        <span class="pub-meta"><b>Ninell Oldenburg</b>, Jacob Aarup Dalsgaard, Anders Søgaard, and Roberta Sinatra. (Under review).</span>
       </li>
 
       <li>
         <span class="pub-tag">preprint</span>
-        <span class="pub-title">Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard.2026. <i>On the Measure of a Model: From Intelligence to Generality</i>.</span>
-        <span class="pub-meta">(Under review).</span>
+        <span class="pub-title"><i>On the Measure of a Model: From Intelligence to Generality</i>.</span>
+        <span class="pub-meta">Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard. (Under review).</span>
         <a href="https://arxiv.org/abs/2511.11773" target="_blank" class="btn">Arxiv</a>
         <a href="https://arxiv.org/pdf/2511.11773" target="_blank" class="btn">PDF</a>
       </li>
 
       <li>
         <span class="pub-tag">AAAI</span>
-        <span class="pub-title"><b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2026. <i>Realist and Pluralist Conceptions of Intelligence and Their Implications on AI Research</i>.</span>
-        <span class="pub-meta">In Proceedings of the AAAI Conference on Artificial Intelligence. (forthcoming).</span>
+        <span class="pub-title"><i>Realist and Pluralist Conceptions of Intelligence and Their Implications on AI Research</i>.</span>
+        <span class="pub-meta"><b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. In Proceedings of the AAAI Conference on Artificial Intelligence. (forthcoming).</span>
         <a href="https://arxiv.org/abs/2511.15282" target="_blank" class="btn">Arxiv</a>
         <a href="https://arxiv.org/pdf/2511.15282" target="_blank" class="btn">PDF</a>
       </li>
@@ -55,15 +55,15 @@
     <ul>
       <li>
         <span class="pub-tag">AIES</span>
-        <span class="pub-title"><b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, and the Power of Imaginaries</i>.</span>
-        <span class="pub-meta">The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.</span>
+        <span class="pub-title"><i>The Stories We Govern By: AI, Risk, and the Power of Imaginaries</i>.</span>
+        <span class="pub-meta"><b>Ninell Oldenburg</b> and Gleb Papyshev. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.</span>
         <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686" target="_blank" class="btn">Proceedings</a>
         <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686/38824" target="_blank" class="btn">PDF</a>
       </li>
 
       <li>
         <span class="pub-tag">AIES</span>
-        <span class="pub-title">Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Beyond Technocratic XAI: The Who, What & How in Explanation Design</i>.</span>
+        <span class="pub-title">Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. <i>Beyond Technocratic XAI: The Who, What & How in Explanation Design</i>.</span>
         <span class="pub-meta">The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.</span>
         <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586" target="_blank" class="btn">Proceedings</a>
         <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586/38724" target="_blank" class="btn">PDF</a>
@@ -71,16 +71,17 @@
 
       <li>
         <span class="pub-tag">preprint</span>
-        <span class="pub-title">Iwan Williams, <b>Ninell Oldenburg</b>, Ruchira Dhar, Joshua Hatherley, Constanza Fierro, Nina Rajcic, Sandrine R. Schiller, Filippos Stamatiou, and Anders Søgaard. 2025. <i>Mechanistic Interpretability Needs Philosophy</i>.</span>
-        <span class="pub-meta">(Under review).</span>
+        <span class="pub-title"><i>Mechanistic Interpretability Needs Philosophy</i>.</span>
+        <span class="pub-meta">Iwan Williams, <b>Ninell Oldenburg</b>, Ruchira Dhar, Joshua Hatherley, Constanza Fierro, Nina Rajcic, Sandrine R. Schiller, Filippos Stamatiou, 
+          and Anders Søgaard. (Under review).</span>
         <a href="https://arxiv.org/abs/2506.18852" target="_blank" class="btn">Arxiv</a>
         <a href="https://arxiv.org/pdf/2506.18852" target="_blank" class="btn">PDF</a>
       </li>
 
       <li>
         <span class="pub-tag">AI &amp; Ethics</span>
-        <span class="pub-title"><b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-Compression Trade-Off in XAI</i>.</span>
-        <span class="pub-meta">AI &amp; Ethics.</span>
+        <span class="pub-title"><i>Navigating the Informativeness-Compression Trade-Off in XAI</i>.</span>
+        <span class="pub-meta"><b>Ninell Oldenburg</b> and Anders Søgaard. AI &amp; Ethics.</span>
         <a href="https://link.springer.com/article/10.1007/s43681-025-00733-5" target="_blank" class="btn">Springer</a>
         <a href="https://link.springer.com/epdf/10.1007/s43681-025-00733-5?sharing_token=o8H9C5-qkdQmRTlMvTDstPe4RwlQNchNByi7wbcMAY5GWHrJ9kwvPzZ0LCOPxs7vSTajH49lvGE8M-q6rAWFASdL9oh90I1O4eZ8znCo8UtxYF_NMObqsKpgPb86oD1iGyByY9Ewyb1EdFZSqQr3QLAyzrz3FJcEIEP2ts6pAEk%3D" target="_blank" class="btn">PDF</a>
       </li>
@@ -90,8 +91,8 @@
     <ul>
       <li>
         <span class="pub-tag">AAMAS</span>
-        <span class="pub-title"><b>Ninell Oldenburg</b> and Tan Zhi-Xuan. 2024. <i>Learning and Sustaining Shared Normative Systems via Bayesian Rule Induction in Markov Games</i>.</span>
-        <span class="pub-meta">In Proc. of the 23rd International Conference on Autonomous Agents and Multiagent Systems. University of Auckland, New Zealand.</span>
+        <span class="pub-title"><i>Learning and Sustaining Shared Normative Systems via Bayesian Rule Induction in Markov Games</i>.</span>
+        <span class="pub-meta"><b>Ninell Oldenburg</b> and Tan Zhi-Xuan. In Proc. of the 23rd International Conference on Autonomous Agents and Multiagent Systems. University of Auckland, New Zealand.</span>
         <a href="https://dl.acm.org/doi/abs/10.5555/3635637.3663011" target="_blank" class="btn">Proceedings</a>
         <a href="https://www.ifaamas.org/Proceedings/aamas2024/pdfs/p1510.pdf" target="_blank" class="btn">PDF</a>
       </li>
