--- a/pages/work.html
+++ b/pages/work.html
@@ -63,8 +63,8 @@
 
       <li>
         <span class="pub-tag">AIES</span>
-        <span class="pub-title">Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. <i>Beyond Technocratic XAI: The Who, What & How in Explanation Design</i>.</span>
-        <span class="pub-meta">The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.</span>
+        <span class="pub-title"><i>Beyond Technocratic XAI: The Who, What & How in Explanation Design</i>.</span>
+        <span class="pub-meta">Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.</span>
         <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586" target="_blank" class="btn">Proceedings</a>
         <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586/38724" target="_blank" class="btn">PDF</a>
       </li>
