--- a/pages/work.html
+++ b/pages/work.html
@@ -20,126 +20,198 @@
 
     <h1>research</h1>
 
+    <hr>
+
     <h2>2026</h2>
     <ul>
       <li>
+      <div class="publication">
         <span class="pub-tag"> </span>
-        <span class="pub-title"><i>Gendered Epistemologies and Existential Risk</i>. (Working Paper).</span>
-        <span class="pub-meta"><b>Ninell Oldenburg</b>.</span>
+        <span class="pub-title"><b>AI Safety and Gendered Epistemologies</b>. (Working Paper).</span>
+        <span class="pub-meta">Ninell Oldenburg.</span>
+      </div>
       </li>
 
       <li>
+      <div class="publication">
         <span class="pub-tag"> </span>
-        <span class="pub-title"><i>AI Risk Research Dataset</i>.</span>
-        <span class="pub-meta"><b>Ninell Oldenburg</b>, Jacob Aarup Dalsgaard, Anders Søgaard, and Roberta Sinatra. (Under review).</span>
+        <span class="pub-title"><b>AI Risk Research Dataset</b>. (Working Paper).</span>
+        <span class="pub-meta"><u>Ninell Oldenburg</u>, Jacob Aarup Dalsgaard, Anders Søgaard, and Roberta Sinatra.</span>
+      </div>
       </li>
 
       <li>
-        <span class="pub-tag">preprint</span>
-        <span class="pub-title"><i>On the Measure of a Model: From Intelligence to Generality</i>.</span>
-        <span class="pub-meta">Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard. (Under review).</span>
-        <a href="https://arxiv.org/abs/2511.11773" target="_blank" class="btn">Arxiv</a>
-        <a href="https://arxiv.org/pdf/2511.11773" target="_blank" class="btn">PDF</a>
+      <div class="publication">
+        <span class="pub-tag">Preprint</span>
+        <span class="pub-title"><b>On the Measure of a Model: From Intelligence to Generality</b>. (Under review).</span>
+        <span class="pub-meta">Ruchira Dhar, <u>Ninell Oldenburg</u>, and Anders Søgaard.</span>
+        <div class="buttons">
+          <a href="https://arxiv.org/abs/2511.11773" target="_blank" class="btn">ABS</a>
+          <a href="https://arxiv.org/pdf/2511.11773" target="_blank" class="btn">PDF</a>
+        </div>
+      </div>
       </li>
 
+        
       <li>
+      <div class="publication">
         <span class="pub-tag">AAAI</span>
-        <span class="pub-title"><i>Realist and Pluralist Conceptions of Intelligence and Their Implications on AI Research</i>.</span>
-        <span class="pub-meta"><b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. In Proceedings of the AAAI Conference on Artificial Intelligence. (forthcoming).</span>
-        <a href="https://arxiv.org/abs/2511.15282" target="_blank" class="btn">Arxiv</a>
-        <a href="https://arxiv.org/pdf/2511.15282" target="_blank" class="btn">PDF</a>
-      </li>
+        <span class="pub-title"><b>Realist and Pluralist Conceptions of Intelligence and Their Implications on AI Research</b>. (Forthcoming).</span>
+        <span class="pub-meta"><u>Ninell Oldenburg</u>, Ruchira Dhar, and Anders Søgaard. In Proceedings of the AAAI Conference on Artificial Intelligence.</span>
+        <div class="buttons">
+          <a href="https://arxiv.org/abs/2511.15282" target="_blank" class="btn">ABS</a>
+          <a href="https://arxiv.org/pdf/2511.15282" target="_blank" class="btn">PDF</a>
+        </div>
+      </div>
+    </li>
     </ul>
+
+    <hr>
 
     <h2>2025</h2>
     <ul>
       <li>
+      <div class="publication">
         <span class="pub-tag">AIES</span>
-        <span class="pub-title"><i>The Stories We Govern By: AI, Risk, and the Power of Imaginaries</i>.</span>
-        <span class="pub-meta"><b>Ninell Oldenburg</b> and Gleb Papyshev. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.</span>
-        <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686" target="_blank" class="btn">Proceedings</a>
-        <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686/38824" target="_blank" class="btn">PDF</a>
+        <span class="pub-title"><b>The Stories We Govern By: AI, Risk, and the Power of Imaginaries</b>.</span>
+        <span class="pub-meta"><u>Ninell Oldenburg</u> and Gleb Papyshev. The 8th AAAI/ACM Conference on AI, Ethics, 
+          and Society. Madrid, Spain.</span>
+        <div class="buttons">
+          <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686" target="_blank" class="btn">ABS</a>
+          <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686/38824" target="_blank" class="btn">PDF</a>
+        </div>
+      </div>
       </li>
 
       <li>
+      <div class="publication">
         <span class="pub-tag">AIES</span>
-        <span class="pub-title"><i>Beyond Technocratic XAI: The Who, What & How in Explanation Design</i>.</span>
-        <span class="pub-meta">Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.</span>
-        <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586" target="_blank" class="btn">Proceedings</a>
-        <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586/38724" target="_blank" class="btn">PDF</a>
+        <span class="pub-title"><b>Beyond Technocratic XAI: The Who, What & How in Explanation Design</b>.</span>
+        <span class="pub-meta">Ruchira Dhar, Stephanie Brandl, <u>Ninell Oldenburg</u>, and Anders Søgaard. The 8th AAAI/ACM 
+          Conference on AI, Ethics, and Society. Madrid, Spain.</span>
+        <div class="buttons">
+          <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586" target="_blank" class="btn">ABS</a>
+          <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586/38724" target="_blank" class="btn">PDF</a>
+        </div>
+      </div>
       </li>
 
       <li>
-        <span class="pub-tag">preprint</span>
-        <span class="pub-title"><i>Mechanistic Interpretability Needs Philosophy</i>.</span>
-        <span class="pub-meta">Iwan Williams, <b>Ninell Oldenburg</b>, Ruchira Dhar, Joshua Hatherley, Constanza Fierro, Nina Rajcic, Sandrine R. Schiller, Filippos Stamatiou, 
-          and Anders Søgaard. (Under review).</span>
-        <a href="https://arxiv.org/abs/2506.18852" target="_blank" class="btn">Arxiv</a>
-        <a href="https://arxiv.org/pdf/2506.18852" target="_blank" class="btn">PDF</a>
+      <div class="publication">
+        <span class="pub-tag">Preprint</span>
+        <span class="pub-title"><b>Mechanistic Interpretability Needs Philosophy</b>. (Under review).</span>
+        <span class="pub-meta">Iwan Williams, <u>Ninell Oldenburg</u>, Ruchira Dhar, Joshua Hatherley, Constanza Fierro, Nina Rajcic, 
+          Sandrine R. Schiller, Filippos Stamatiou, and Anders Søgaard.</span>
+        <div class="buttons">
+          <a href="https://arxiv.org/abs/2506.18852" target="_blank" class="btn">ABS</a>
+          <a href="https://arxiv.org/pdf/2506.18852" target="_blank" class="btn">PDF</a>
+        </div>
+      </div>
       </li>
 
       <li>
+      <div class="publication">
         <span class="pub-tag">AI &amp; Ethics</span>
-        <span class="pub-title"><i>Navigating the Informativeness-Compression Trade-Off in XAI</i>.</span>
-        <span class="pub-meta"><b>Ninell Oldenburg</b> and Anders Søgaard. AI &amp; Ethics.</span>
-        <a href="https://link.springer.com/article/10.1007/s43681-025-00733-5" target="_blank" class="btn">Springer</a>
-        <a href="https://link.springer.com/epdf/10.1007/s43681-025-00733-5?sharing_token=o8H9C5-qkdQmRTlMvTDstPe4RwlQNchNByi7wbcMAY5GWHrJ9kwvPzZ0LCOPxs7vSTajH49lvGE8M-q6rAWFASdL9oh90I1O4eZ8znCo8UtxYF_NMObqsKpgPb86oD1iGyByY9Ewyb1EdFZSqQr3QLAyzrz3FJcEIEP2ts6pAEk%3D" target="_blank" class="btn">PDF</a>
+        <span class="pub-title"><b>Navigating the Informativeness-Compression Trade-Off in XAI</b>.</span>
+        <span class="pub-meta"><u>Ninell Oldenburg</u> and Anders Søgaard. AI &amp; Ethics.</span>
+        <div class="buttons">
+          <a href="https://link.springer.com/article/10.1007/s43681-025-00733-5" target="_blank" class="btn">ABS</a>
+          <a href="https://link.springer.com/epdf/10.1007/s43681-025-00733-5?sharing_token=o8H9C5-qkdQmRTlMvTDstPe4RwlQNchNByi7wbcMAY5GWHrJ9kwvPzZ0LCOPxs7vSTajH49lvGE8M-q6rAWFASdL9oh90I1O4eZ8znCo8UtxYF_NMObqsKpgPb86oD1iGyByY9Ewyb1EdFZSqQr3QLAyzrz3FJcEIEP2ts6pAEk%3D" target="_blank" class="btn">PDF</a>
+        </div>
+      </div>
       </li>
     </ul>
+
+    <hr>
 
     <h2>2024</h2>
     <ul>
       <li>
+      <div class="publication">
         <span class="pub-tag">AAMAS</span>
-        <span class="pub-title"><i>Learning and Sustaining Shared Normative Systems via Bayesian Rule Induction in Markov Games</i>.</span>
-        <span class="pub-meta"><b>Ninell Oldenburg</b> and Tan Zhi-Xuan. In Proc. of the 23rd International Conference on Autonomous Agents and Multiagent Systems. University of Auckland, New Zealand.</span>
-        <a href="https://dl.acm.org/doi/abs/10.5555/3635637.3663011" target="_blank" class="btn">Proceedings</a>
-        <a href="https://www.ifaamas.org/Proceedings/aamas2024/pdfs/p1510.pdf" target="_blank" class="btn">PDF</a>
+        <span class="pub-title"><b>Learning and Sustaining Shared Normative Systems via Bayesian Rule Induction in Markov Games</b>.</span>
+        <span class="pub-meta"><u>Ninell Oldenburg</u> and Tan Zhi-Xuan. In Proc. of the 23rd International Conference on Autonomous 
+          Agents and Multiagent Systems. University of Auckland, New Zealand.</span>
+        <div class="buttons">
+          <a href="https://dl.acm.org/doi/abs/10.5555/3635637.3663011" target="_blank" class="btn">ABS</a>
+          <a href="https://www.ifaamas.org/Proceedings/aamas2024/pdfs/p1510.pdf" target="_blank" class="btn">PDF</a>
+        </div>
+      </div>
       </li>
     </ul>
 
     <h1>talks</h1>
+
+        <hr>
+
     <ul>
       <li>
+        <div class="publication">
         <span class="pub-tag">TALK</span>
-        <span class="pub-title">Philosophical Commitments to LLM Evaluations: The Problem of Moving Goalposts and Observational Relativity.</span>
+        <span class="pub-title"><b>Philosophical Commitments to LLM Evaluations: The Problem of Moving 
+          Goalposts and Observational Relativity</b>.</span>
         <span class="pub-meta">AI &amp; Humanity Lab Hong Kong Seminar Series 2025</span>
+        <div class="buttons">
         <a href="https://www.youtube.com/watch?v=w6XTWLMip88" target="_blank" class="btn">Video</a>
-      </li>
+        </div>
+        </div>
+        </li>
 
       <li>
+        <div class="publication">
         <span class="pub-tag">TALK</span>
-        <span class="pub-title">Learning and Sustaining Social Norms as Normative Equilibria.</span>
+        <span class="pub-title"><b>Learning and Sustaining Social Norms as Normative Equilibria</b>.</span>
         <span class="pub-meta">PIBBSS Symposium 2023</span>
+        <div class="buttons">
         <a href="https://www.youtube.com/watch?v=u4sAGSbXZqQ" target="_blank" class="btn">Video</a>
+       </div> 
+       </div>
       </li>
     </ul>
 
     <h1>media</h1>
+
+        <hr>
+
     <ul>
       <li>
+        <div class="publication">
         <span class="pub-tag">MEDIA</span>
-        <span class="pub-title">Someone Behind the Screen? Researchers Are Divided on AI Consciousness.</span>
+        <span class="pub-title">2025. <b>Someone Behind the Screen? Researchers Are Divided on AI Consciousness</b>.</span>
         <span class="pub-meta">ScienceNordic</span>
+        <div class="buttons">
         <a href="https://www.sciencenordic.com/artificial-intelligence-brain-computers/is-there-someone-behind-the-screen-researchers-are-divided-on-ai-consciousness/2482914" target="_blank" class="btn">Link</a>
+        </div>  
+        </div>
       </li>
 
-      <li>
+        <li>
+          <div class="publication">
         <span class="pub-tag">MEDIA</span>
-        <span class="pub-title">Meine Freunde, die Querdenker (<i>Eng: My Friends, Anti-Vaxxers</i>).</span>
+        <span class="pub-title">2021. <b>Meine Freunde, die Querdenker</b> (Eng: My Friends, Anti-Vaxxers).</span>
         <span class="pub-meta">Die Freiheitsliebe</span>
+        <div class="buttons">
         <a href="https://diefreiheitsliebe.de/gesellschaft/meine-freunde-die-querdenker/" target="_blank" class="btn">Link</a>
-      </li>
+        </div>
+        </div>
+        </li>
     </ul>
 
     <h1>art</h1>
+
+    <hr>
+
     <ul>
       <li>
+        <div class="publication">
         <span class="pub-tag">ART</span>
-        <span class="pub-title">2024. <i>Debates</i>.</span>
+        <span class="pub-title">2024. <b>Debates</b>.</span>
         <span class="pub-meta">Artwork / project</span>
+        <div class="buttons">
         <a href="alignment/debates.html" target="_blank" class="btn">Link</a>
-      </li>
+        </div>
+        </div>
+        </li>
     </ul>
 
   </div>
