--- a/pages/work.html
+++ b/pages/work.html
@@ -140,14 +140,14 @@
       </li>
     </ul>
 
-    <h1>talks</h1>
+    <h1>recorded talks</h1>
 
         <hr>
 
     <ul>
       <li>
         <div class="publication">
-        <span class="pub-tag">TALK</span>
+        <span class="pub-tag">AI&H</span>
         <span class="pub-title"><b>Philosophical Commitments to LLM Evaluations: The Problem of Moving 
           Goalposts and Observational Relativity</b>.</span>
         <span class="pub-meta">AI &amp; Humanity Lab Hong Kong Seminar Series 2025</span>
@@ -159,7 +159,7 @@
 
       <li>
         <div class="publication">
-        <span class="pub-tag">TALK</span>
+        <span class="pub-tag">PIBBSS</span>
         <span class="pub-title"><b>Learning and Sustaining Social Norms as Normative Equilibria</b>.</span>
         <span class="pub-meta">PIBBSS Symposium 2023</span>
         <div class="buttons">
@@ -176,7 +176,7 @@
     <ul>
       <li>
         <div class="publication">
-        <span class="pub-tag">MEDIA</span>
+        <span class="pub-tag"></span>
         <span class="pub-title">2025. <b>Someone Behind the Screen? Researchers Are Divided on AI Consciousness</b>.</span>
         <span class="pub-meta">ScienceNordic</span>
         <div class="buttons">
@@ -187,7 +187,7 @@
 
         <li>
           <div class="publication">
-        <span class="pub-tag">MEDIA</span>
+        <span class="pub-tag"></span>
         <span class="pub-title">2021. <b>Meine Freunde, die Querdenker</b> (Eng: My Friends, Anti-Vaxxers).</span>
         <span class="pub-meta">Die Freiheitsliebe</span>
         <div class="buttons">
@@ -204,7 +204,7 @@
     <ul>
       <li>
         <div class="publication">
-        <span class="pub-tag">ART</span>
+        <span class="pub-tag"></span>
         <span class="pub-title">2024. <b>Debates</b>.</span>
         <span class="pub-meta">Artwork / project</span>
         <div class="buttons">
