delete english translation

--- a/pages/work.html
+++ b/pages/work.html
@@ -188,7 +188,7 @@
         <li>
           <div class="publication">
         <span class="pub-tag"></span>
-        <span class="pub-title">2021. <b>Meine Freunde, die Querdenker</b> (Eng: My Friends, Anti-Vaxxers).</span>
+        <span class="pub-title">2021. <b>Meine Freunde, die Querdenker</b></span>
         <span class="pub-meta">Die Freiheitsliebe</span>
         <div class="buttons">
         <a href="https://diefreiheitsliebe.de/gesellschaft/meine-freunde-die-querdenker/" target="_blank" class="btn">Link</a>
