--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
         <h1>ninell (she)</h1>
         <p>
-            I'm a second-year PhD student at the <a href="https://cpai.ku.dk/about-cpai/" 
+            I'm a third-year PhD student at the <a href="https://cpai.ku.dk/about-cpai/" 
             target="_blank">Center for Philosophy of AI at the University of Copenhagen</a> supervised by 
             <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. 
             I'm interested in the narratives we construct around AI and what these reveal about our deeper 
